# rag-agent

./: .gitignore  COMPLETE_GITHUB_SETUP.md  CONTRIBUTING.md  DOCKER_GUIDE.md  DOCKER_REGISTRY_SETUP.md  DOCKER_UPLOAD_SUCCESS.md  Dockerfile  GITHUB_SETUP.md  GITHUB_SUCCESS.md  GITHUB_UPLOAD_GUIDE.md  LICENSE  MANUAL_DOCKER_UPLOAD.md  README.md  REPOSITORY_SETUP_GUIDE.md  UPLOAD_INSTRUCTIONS.md  docker-compose.yml  pyproject.toml  run-from-github.sh  setup_github_repo.py  start.sh
.github/workflows/: docker-build.yml
data/: .security_key
data/prompts/: templates.json
rag_agent/: __init__.py  admin.py  agent.py  code_execution.py  config.py  ingestion.py  main.py  performance.py  prompt_engineering.py  retrieval.py  security.py  session_management.py  ui.py  utils.py
tests/: test_basic.py  test_comprehensive.py  test_rag_agent.py
